cassidy: add days

--- a/pushing_outshoot_unfold/days/0.toml
+++ b/pushing_outshoot_unfold/days/0.toml
@@ -25,18 +25,21 @@ You hear the principal say:
 These were the words said on March 13th of 2020, school year of 2020-2021.
 Times of foreshadowing twirl in your mind right then and there.
 # pause()
-One by one,[green()] classmates had stopped showing up to school, 
-any physical contact had been forbidden,
-and there was the intense sanitization of desks, tables, and chairs.
+
+One by one,[green()] classmates had stopped showing up to school, any physical contact had been forbidden, and there was the intense sanitization of desks, tables, and chairs.
 [normal()]
 # pause()
+
 You start to tune out the sound of the announcements, you feel like the world is stopping right in its tracks.
 # green()
+
 You realize that any school activities would be canceled.
 # normal()
+
 All sports, games, clubs, and field trips.
 # pause()
 # green()
+
 Learning from home? You had found that pretty exciting and assured yourself that this wouldn’t last very long.
 # normal()
 """
