--- a/pushing_outshoot_unfold/daysplit/0110.toml
+++ b/pushing_outshoot_unfold/daysplit/0110.toml
@@ -13,4 +13,7 @@ You picked up your new chromebook and supplies today.
 
 You also prepare your desk for classes and hang up your new class schedule. You feel nervous and excited at the same time. 
 # normal()
+
+You get sudden motivation to work on your ELA:
+
 """
