--- a/pushing_outshoot_unfold/daysplit/0120.toml
+++ b/pushing_outshoot_unfold/daysplit/0120.toml
@@ -19,11 +19,7 @@ You remember how awkward zoom meetings are. Especially going into breakout rooms
 Some [green()]classes[normal()] were [green()]kind of confusing[normal()] too. You had to get used to the [green()]strange class schedules[normal()]. You couldn’t believe that you had 20 minutes of passing time between classes.
 # pause()
 
-# green()
-It’s your first day, but you already [green()]have homework[normal()]. You add all your tasks to your to-do list.
-# normal()
+To take a break from school, you decide to go through a This or That book.
+# day0120
 
-That day, you also decided to download another app that tells you the news, so you can keep up with the daily events. 
-# pause()
-# day12()
 """
