--- a/pushing_outshoot_unfold/days/2.toml
+++ b/pushing_outshoot_unfold/days/2.toml
@@ -4,47 +4,53 @@ date = 16
 goto = 3
 
 story = """
-
-It’s Monday morning. You and you Dad are eating waffles for breakfast, and your mom turns on the T.V. 
-# pause()
 # italic()
 # bold()
-“Breaking News: stocks of toilet paper, kleenex wipes, paper towels, water, and more have run out in stores. Shelves of these items are bare, causing some fights for the last packages of supplies.
-# normal()
-Stores now have to wait for new stocks to arrive, and we hope they will soon. There are still high demands for these products.”
-# pause()
-You suddenly have disinterest in finishing your breakfast. You turn around and stare on the T.V screen.
-# green()
-Pictures of bare shelves, crowded stores with people fighting for the last packages, and the faces of worried and fearful people frantically looking around the stores.
+“Breaking News: stocks of toilet paper, kleenex wipes, paper towels, water, and more have run out in stores. [green()]Shelves [normal()]of these items are [green()]bare[normal()], causing some [green()]fights for the last packages of supplies.
 # normal()
 # pause()
-This was way more serious than you thought. 
+
+
+On the T.V are pictures of [green()]bare shelves, crowded stores [normal()]with people [green()]fighting[normal()] for the last packages, and the faces of [green()]worried and fearful people[normal()] frantically looking around the stores.
+# normal()
+# pause()
+
+This was way more serious than you thought.
+# pause() 
+
 # green()
 Your mom and dad exchange worrisome looks, and converse about going out today to get some supplies, afraid that the shelves will be bare for a long time. 
 # normal()
+# pause()
+
 You and your dad decide to go to the store.
 # pause()
-# green()
-You get to the store, and you instantly see 
-loads of people rushing in and out of the store with their carts full of supplies. 
-# normal()
+
+You get to [green()]the store[normal()], and you instantly see loads of [green()]people rushing in and out [normal()]of the store with their [green()]carts full of supplies[normal()]. 
 # pause()
-You start feeling tense, your heart racing, and you can feel your dad starting to worry too. You go to the cleaning supply section and see the 
-# green()
-nearly empty shelves. 
-# normal()
+
+You start [green()]feeling tense[normal()], your [green()]heart racing[normal()], and you can feel your [green()]dad starting to worry[normal()] too. 
 # pause()
+
+You go to the cleaning supply section and [green()]see the nearly empty shelves[normal()]. 
+# pause()
+
 # bold()
 “Only get what we need. We can’t stay for too long,” your dad says grimly. 
 # green()
 # bold()
+# pause()
+
 WHAT DO YOU GRAB? 
 # normal()
 # pause()
 # day2()
-On the way home, you contemplate if the supplies that you bought were enough 2
-to last a few months. You and your dad sit in silence, listening to the radio. 
+
 # pause()
+
+[green()]While driving home, you and your dad[normal()] sit in silence, [green()]listening to the radio[normal()]. 
+# pause()
+
 # italic()
 # green()
 “Covid cases are still rising all across the United States. More than 4,500 have tested positive, and 88 have died. In the world, more than 181,000 people have tested positive. Health professionals advise that people stay home….”
