--- a/pushing_outshoot_unfold/days/6.toml
+++ b/pushing_outshoot_unfold/days/6.toml
@@ -5,17 +5,18 @@ goto = 7
 
 
 story = """
-# green()
-You’ve been starting to feel sluggish and a bit moody lately, because you haven’t been moving around much. 
-# pause()
-You and your parents have been worrying about your grandparents lately. Your aunt, cousins, and grandparents live in the same house. That is why your aunt and cousins can’t leave, due to the risk of exposing the virus to your grandparents. 
+
+You and your [green()]parents[normal()] have been [green()]worrying about[normal()] your [green()]grandparents[normal()] lately. Your aunt, cousins, and grandparents live in the same house. That is why your aunt and cousins can’t leave, due to the [green()]risk of exposing the virus to[normal()] your [green()]grandparents. 
 # normal()
 # pause()
-Right then,you feel a wave of sadness pass through your body. You realized that you haven’t been able to see your cousins in 3 months and you miss spending time with them. Because they are younger than you, you guys often bicker, but it was all fun in games most of the time. 
+
+Right then,you feel a [green()]wave of sadness[normal()] pass through your body. You realized that you haven’t been able to see your cousins in 3 months and you miss spending time with them. Because they are younger than you, you guys often bicker, but it was all fun in games most of the time. 
 # pause()
+
 # green()
 You suggest to your parents that you could drop off supplies in front of your grandparents’ house along with some meals.
 # pause()
+
 Your parents agree, and you are delighted.
 # normal() 
 # day6()
