--- a/pushing_outshoot_unfold/days/7.toml
+++ b/pushing_outshoot_unfold/days/7.toml
@@ -4,26 +4,21 @@ date = 9
 goto = 8
 
 story = """
-This year of school is almost over. Only two more weeks to go. You’ve gotten used to remote learning and have gotten better at managing your time. 
-# green()
-You appreciate how you are able to learn from the comfort of your own home. 
-# pause()
-However, you still remember how all your 8th grade activities were cancelled, including your family’s vacation to DisneyLand.
-# normal() 
-# pause()
-Some of your teachers stopped doing zoom meetings and just give lessons to do by yourself. It’s definitely not the same experience as being in regular school. 
-# pause()
-And instead of being stuck in your house all day doing homework, you occasionally go outside to your backyard for some fresh air. 
-# green()
-After finishing your homework, you decide to spend time with your little sister. 
+
+Instead of being stuck in your house all day doing homework, you occasionally go outside to your backyard for some fresh air. 
+
+After finishing your homework, you decide to [green()]spend time with your little sister. 
 # normal()
 # pause()
+
 Playing with little sister:
 # pause()
 # day7()
 # pause()
-This was really fun for you. You realize that you should play more with your sister. 
+
 # green()
+This was really fun for you. You realize that you should play more with your sister. 
+
 This has made you really happy. You found a way to cope with the stress you’ve had with school.
 # normal()
 """
