--- a/pushing_outshoot_unfold/days2/15.toml
+++ b/pushing_outshoot_unfold/days2/15.toml
@@ -4,15 +4,16 @@ date = 1
 goto = 16
 
 story = """
-AHHHHHH, the first final exams are coming up this month! 
+
+You’ve never had a finals before, so you’re pretty [green()]nervous for what's to come[normal()]. 
+# pause()
+
 # green()
-You spend most of your time studying today, but also taking care of your sister. 
-# pause()
-You’ve never had a finals before, so you’re pretty nervous for what's to come. 
-# pause()
 People in your zoom classes are turning on their cameras less and less. Breakout rooms are as awkward and uncomfortable as normal. Sometimes, when you try to get a conversation started, no one talks or answers, which makes things even more awkward. 
 # normal()
-Anyway, time to study! 
+
+Anyway, you have to help your sister with school now!
 # pause()
+
 # day15()
 """
