--- a/sailboat.toml
+++ b/sailboat.toml
@@ -13,7 +13,7 @@ description = ""
 url = "https://github.com/po-unfold"
 keywords = ""
 license = "none"
-latest_build = "0.3.0"
+latest_build = "0.3.0+d36343e.1"
 release-notes = "[prerelease] backup monday's work"
 latest_release = "0.2.3-dev1"
 
