--- a/pushing_outshoot_unfold/days/016b.toml
+++ b/pushing_outshoot_unfold/days/016b.toml
@@ -10,5 +10,9 @@ There were some answers that you missed on the final exams that made you angry w
 # pause()
 However, you now get a 2 and a half weeks break from school, woo-hoo!
 
-You decide to play Would You Rather! """
+You decide to play Would You Rather!
+
 # day16b()
+
+"""
+
