--- a/sailboat.toml
+++ b/sailboat.toml
@@ -13,9 +13,9 @@ description = ""
 url = "https://github.com/po-unfold"
 keywords = ""
 license = "none"
-latest_build = "1.0.0"
-release-notes = "Testing"
-latest_release = "0.3.0"
+latest_build = "1.0.1"
+release-notes = "First Major Release"
+latest_release = "1.0.0"
 
 
 # Resource Setup:
