--- a/pushing_outshoot_unfold/days/008a.toml
+++ b/pushing_outshoot_unfold/days/008a.toml
@@ -26,7 +26,15 @@ This wasn’t really the way you wanted this year to end, but this is what is ne
 You start to flip through your yearbook in the car. First you look through the table to contents. 
 # normal()
 
-It must be upsetting for the fifth graders to end their year this way too, you think to yourself. You can relate to them. Your mind focuses back onto your yearbook.
+It must be upsetting for the fifth graders to end their year this way too, you think to yourself. You can relate to them. 
+,----------------.
+(                 `------------.
+ >  Your mind focuses back       )
+(    onto your yearbook... )-----'
+ `---(            )------'
+      `-----(_)--'
+               0
+                o
 # pause()
 # day8a()
  
